[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["denis ekimenko <den.pdb@gmail.com>"]
readme = "README.md"
packages = [{ include = "brain_games" },
#	{include = "hexlet_code"}
]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
asciinema = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
